# otus-cpp-hw2

./: CMakeLists.txt  ip_filter.cpp  ip_lib.cpp  ip_lib.h  test_ip.cpp
test_data/: ip_filter_any.tsv  ip_filter_first.tsv  ip_filter_onetwo.tsv  ip_filter_small.tsv  ip_filter_small_sorted.tsv
